styles.css
/*
COLORS
light-yellow - #f7e4bf;
light-blue - #78a7c6;
dark-blue - #134d71;
white - ;
black - #000000;
*/


html {
  font-family: 'Quicksand', sans-serif;
  min-height: 100%
}
body {
  background: rgb(247,228,191);
  background: linear-gradient(0deg, rgba(247,228,191,1) 8%, rgba(120,167,198,1) 49%,
  rgba(19,77,113,0.9654455532212886) 100%);
  display: flex;
	flex-direction: column;
  align-items: center;

}
section {
  display: flex;
	flex-direction: column;
  /* justify-content: space-between; */
	align-items: center;
	/* align-content: center; */
}

h1 {
  width: 500px;
  margin:  25px;
  font-size: 24px;
  text-align: center;
  font-family: 'Quicksand', sans-serif;
  color: #ffffff
}

h2 {
  width: 500px;
  /* margin: 10px; */
  font-size: 18px;
  text-align: center;
  font-family: 'Quicksand', sans-serif;
  color: #ffffff
}


.div1 {
  width: 400px;
  height: 85px;
  border: 1px solid white;
  background: white;
  margin: 25px;
  border-radius: 15px;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.div2 {
  width: 600px;
  height: 75px;
  padding: 40px;
  border: 1px solid white;
  background-color: white;
  margin: 50px;
  border-radius: 15px;
  display: flex;
  justify-content: center;

}
/* .div3 {
  margin: 25px;
  padding: 40px;
  justify-content: center;
} */



 button {
  color: white;
  background-color: #134d71;
  padding: 5px 5px;
  border-radius: 5px;
  border: 0;
  font-size: 14px;
  position: center;
  width: auto;

}

 button:hover,
 button:focus {
  color: #999;
}

.meditate {
  align-items: center;
  width: 60px;
  height: 50px;

}
.hidden{
  display: none;
}

